--- a/index.html
+++ b/index.html
@@ -1,13 +1,39 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <!-- bootstrap -->
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/bootstrap/5.3.3/css/bootstrap.min.css"
+        integrity="sha512-jnSuA4Ss2PkkikSOLtYs8BlYIeeIK1h99ty4YfvRPAlzr377vr3CXDb7sb7eEEBYjDtcYj+AjBH3FLv5uSJuXg=="
+        crossorigin="anonymous" referrerpolicy="no-referrer" />
+    <!-- css -->
+    <link rel="stylesheet" href="./css/style.css">
     <script type="module" src="./js/script.js"></script>
     <title>Our Team</title>
 </head>
-<body>
 
-    
+<body>
+    <div class="container d-flex flex-column align-items-center">
+        <h1 class="space-Argument fw-bold">Meet our Team</h1>
+        <p class="space-Argument text-center">Lorem ipsum dolor sit amet consectetur adipisicing elit. Impedit,
+            assumenda provident, quo quibusdam nobis ea cumque, recusandae commodi possimus numquam error incidunt
+            reiciendis veniam ipsum ipsa voluptatibus! Tenetur, earum quis.</p>
+        <div class="container">
+            <div id="container-card" class="space-Argument row gap-5">
+                <!-- <div class="card col-4 d-flex">
+                    <div class="card-img">
+                        <img src="" alt="">
+                    </div>
+                    <div class="card-text">
+                        
+                    </div>
+                </div> -->
+            </div>
+        </div>
+
+    </div>
 </body>
+
 </html>
