stable full screen card

--- a/index.html
+++ b/index.html
@@ -20,20 +20,9 @@
         <p class="space-Argument text-center">Lorem ipsum dolor sit amet consectetur adipisicing elit. Impedit,
             assumenda provident, quo quibusdam nobis ea cumque, recusandae commodi possimus numquam error incidunt
             reiciendis veniam ipsum ipsa voluptatibus! Tenetur, earum quis.</p>
-        <div class="container">
-            <div id="container-card" class="space-Argument row gap-5">
-            </div>
+        <div id="container-card" class="container space-Argument row">
+                <!-- here i generate card via js -->
         </div>
-        
+
     </div>
 </body>
-
-</html>
-<!-- <div class="card col-4 d-flex">
-    <div class="card-img">
-        <img src="" alt="">
-    </div>
-    <div class="card-text">
-        
-    </div>
-</div> -->
